--- a/laboratorio.html
+++ b/laboratorio.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/botones-accion.css">
     <link rel="stylesheet" href="css/laboratorio.css">
     <link rel="stylesheet" href="css/celdas-codigo.css">
+    <link rel="stylesheet" href="css/notificaciones.css">
 
 
     <title>
@@ -155,7 +156,7 @@
                 <img src="imagenes/eliminar.svg">
                 <span class="textBotonAccion">Borrar celda</span>
               </button>
-              <button class="tool-btn">
+              <button class="tool-btn" id="btnGuardarProyecto">
                 <img src="imagenes/save.svg">
                 <span class="textBotonAccion">Guardar proyecto</span>
               </button>
@@ -232,6 +233,7 @@
     <script src="js/laboratorio.js"></script>
     <script src="js/celdas-codigo.js"></script>
     <script src="js/fuentes.js"></script>
+    <script src="js/notificaciones.js"></script>
 
 
 
